fixes #61 - min-height adjustment for hero images fixes an overflow issue with larger heroes

--- a/css/scu.css
+++ b/css/scu.css
@@ -1909,6 +1909,17 @@ html.no-fontface .gateway-navigation .nav > .slide-menu .slide-panel h6 {
     margin: 0 0 5px;
   }
 }
+.subfooter .subfooter-title {
+  color: white;
+}
+.subfooter .subfooter-links {
+  color: white;
+  font-size: 15px;
+}
+.subfooter a.transparent {
+  font-size: 22px;
+  width: 30px;
+}
 body.homepage {
   background-color: #f7f7f7;
 }
@@ -2010,7 +2021,7 @@ html.no-fontface .evergreen.module {
   }
 }
 .hero.module .hero-body {
-  height: 300px;
+  min-height: 300px;
 }
 .hero.module .hero-body .high-contrast {
   background-color: rgba(0, 0, 0, 0.55);
