--- a/less/partials/heroes.less
+++ b/less/partials/heroes.less
@@ -97,7 +97,7 @@
       }
     }
 
-    height: @hero-xs-height;
+    min-height: @hero-xs-height;
     p, ol, ul {
       margin-bottom: 1.5em;
       font-size: 18px;
